--- a/config/blacklight.yml
+++ b/config/blacklight.yml
@@ -10,12 +10,10 @@
 # jetty_path is only required for rake tasks that need to know
 # how to start up solr, generally for automated testing. 
 
-# Do we need: "adapter: solr"?
-
 development:
   url: http://127.0.0.1:8983/solr/blacklight-core
 test:
   url: http://127.0.0.1:8983/solr/blacklight-core
-  # TODO: Get separate dev and test cores, and change this back to 8888.
+  # TODO: Get separate dev and test cores, and change this back to 8888. bug #1
 production:
   url: http://127.0.0.1:8983/solr/blacklight-core
