--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,6 @@
 language: ruby
 sudo: false
 cache: bundler
-script: bundle exec rake ci
+script:
+  - bundle exec rake ci
+  - bundle exec rubocop -D
