Tests run on a port != 8983... but this is messy.

--- a/config/jetty.yml
+++ b/config/jetty.yml
@@ -2,7 +2,7 @@
 # environments. Override any of the defaults with environment variables.
 default: &default
   startup_wait: <%= ENV['JETTY_STARTUP_WAIT'] || 15 %>
-  jetty_port: <%= ENV['JETTY_PORT'] || 8983 %>
+  jetty_port: <%= ENV['JETTY_PORT'] %>
   jetty_home: <%= ENV['JETTY_HOME'] || File.expand_path(File.join(File.dirname(File.dirname(__FILE__)), 'jetty')) %>
   solr_core: <%= ENV['SOLR_CORE'] || 'blacklight-core' %>
 development:
