Towards #490: just vietnam

--- a/config/redirect_map.yml
+++ b/config/redirect_map.yml
@@ -1,4 +1,5 @@
 ---
+"/collections/vietnam-the-vietnam-collection": "/collections/vietnam"
 "/catalog/openvault:3": "/catalog/I_8B3BAB5CD79649BE867CFE665E69B10B"
 "/catalog/openvault:4": "/catalog/I_4704FDE6CD0D48CB90490088646A47BA"
 "/catalog/openvault:5": "/catalog/V_894B7E1B59CA45FD99C37EC63DD64A46"
