scholar exhibit redirects.

--- a/config/redirect_map.yml
+++ b/config/redirect_map.yml
@@ -1,5 +1,34 @@
 ---
-# TODO: Do we need to have redirects from the old scholar collections?
+"/scholar/elizabeth-deane": "/exhibits/leary-and-jobs/authors#tabs"
+"/custom_collections/13": "/exhibits/boston_civil_rights"
+"/scholar/audrea-dunham": "/exhibits/boston_civil_rights/authors#tabs"
+"/custom_collections/8": "/exhibits/tech-nostalgia"
+"/scholar/john-campopiano": "/exhibits/tech-nostalgia/authors#tabs"
+"/custom_collections/7": "/exhibits/eric_jackson"
+"/scholar/leonard-brown": "/exhibits/eric_jackson/authors#tabs"
+"/custom_collections/6": "/exhibits/art_of_asian_cooking"
+"/scholar/dana-polan": "/exhibits/art_of_asian_cooking/authors#tabs"
+"/custom_collections/15": "/exhibits/new_critical_television"
+"/scholar/mark-cooper": "/exhibits/new_critical_television/authors#tabs"
+"/custom_collections/14": "/exhibits/nine_poets"
+"/scholar/jim-cocola": "/exhibits/nine_poets/authors#tabs"
+"/custom_collections/9": "/exhibits/pan-african_liberation"
+"/scholar/joe-parrott": "/exhibits/pan-african_liberation/authors#tabs"
+"/custom_collections/5": "/exhibits/showing_status"
+"/scholar/maureen-mann-tannetta": "/exhibits/showing_status/authors#tabs"
+"/custom_collections/11": "/exhibits/television_violence"
+"/scholar/daniella-perry": "/exhibits/television_violence/authors#tabs"
+"/custom_collections/10": "/exhibits/advocates"
+"/scholar/lisle-baker": "/exhibits/advocates/authors#tabs"
+"/custom_collections/16": "/exhibits/boring_and_sachs"
+"/custom_collections/17": "/exhibits/bibring"
+"/user/olga-umansky": "/exhibits/boring_and_sachs/authors#tabs"
+"/custom_collections/12": "/exhibits/julia_child"
+"/scholar/tracey-deutsch": "/exhibits/julia_child/authors#tabs"
+"/custom_collections/4": "/exhibits/needlework"
+"/scholar/amanda-sikarskie": "/exhibits/needlework/authors#tabs"
+"/custom_collections/38": "/exhibits/zoom"
+"/scholar/leslie-paris": "/exhibits/zoom/authors#tabs"
 
 "/catalog/advocates-advocates": "/collections/advocates"
 "/catalog/march-march-on-washington": "/collections/march_on_washington"
@@ -11,7 +40,6 @@
 "/catalog/vietnam-the-vietnam-collection": "/collections/vietnam"
 "/catalog/wpna-wpna-war-and-peace-in-the-nuclear-age": "/collections/war_peace"
 
-# This block not necessary if deployed before old links get indexed.
 "/collections/advocates-advocates": "/collections/advocates"
 "/collections/march-march-on-washington": "/collections/march_on_washington"
 "/collections/new-television-workshop": "/collections/new_television_workshop"
