Rename to match metadata.

--- a/config/redirect_map.yml
+++ b/config/redirect_map.yml
@@ -36,7 +36,7 @@
 "/catalog/prpe-press-and-the-people": "/collections/press_people"
 "/catalog/rock-and-roll": "/collections/rock_roll"
 "/catalog/say-brother": "/collections/say_brother"
-"/catalog/vault-from-the-vault": "/collections/vault"
+"/catalog/vault-from-the-vault": "/collections/from_the_vault"
 "/catalog/vietnam-the-vietnam-collection": "/collections/vietnam"
 "/catalog/wpna-wpna-war-and-peace-in-the-nuclear-age": "/collections/war_peace"
 
