--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,6 @@ language: ruby
 sudo: false
 cache: bundler
 script:
-  - bundle exec rails server
+  - bundle exec rails server &
   - bundle exec rake ci
   - bundle exec rubocop -D
