'add description box'

--- a/app/views/treasuries/data/cookie.yml
+++ b/app/views/treasuries/data/cookie.yml
@@ -1,4 +1,5 @@
 title: 'The Andrew Egendorf thing Wwihty th Alistair Cooke on thahaaaaa siiide'
+description: 'LO!L!!! this is great stuff!!!! hello!'
 seasons:
   - seasonNumber: 1
     seasonImage: 'https://s3.amazonaws.com/openvault.wgbh.org/special_collections/alistair-cooke/alistair_cooke_collection.jpg'
