--- a/app/views/treasuries/data/alistair-cooke.yml
+++ b/app/views/treasuries/data/alistair-cooke.yml
@@ -1,5 +1,5 @@
 title: 'The Linda and Andrew Egendorf Masterpiece Theatre Alistair Cooke Collection'
-description: 'The Linda and Andrew Egendorf Masterpiece Theatre Alistair Cooke Collection features programs from the anthology series Masterpiece Theatre presented during Alistair Cooke’s tenure as host (1971-1992). Along with a complete list of those programs with descriptions, the collection will also include Alistair Cooke’s introductions and conclusions for each episode. Additional materials in the collection will be made available online or on-site at WGBH as they are digitized.'
+description: '<a href="/collections/alistair-cooke-donor">The Linda and Andrew Egendorf</a> Masterpiece Theatre Alistair Cooke Collection features programs from the anthology series Masterpiece Theatre presented during Alistair Cooke’s tenure as host (1971-1992). Along with a complete list of those programs with descriptions, the collection will also include Alistair Cooke’s introductions and conclusions for each episode. Additional materials in the collection will be made available online or on-site at WGBH as they are digitized.'
 posterImage: 'https://s3.amazonaws.com/openvault.wgbh.org/special_collections/alistair-cooke/alistair_cooke_collection.jpg'
 
 altLink:
