'more layout tweaks'

--- a/app/views/treasuries/data/alistair-cooke.yml
+++ b/app/views/treasuries/data/alistair-cooke.yml
@@ -8,7 +8,7 @@ listLink:
 
 clipLink:
   url: '/collections/alistair-cooke-clips'
-  text: Clip View
+  text: Alistair Cooke Clips
 
 seasons:
   - seasonNumber: 1
