--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -3,3 +3,9 @@ AllCops:
   Exclude:
     - 'bin/**/*' # I didn't write these, so I don't want to touch them.
     - 'vendor/**/*' # Travis puts stuff here.
+Style/StringLiterals:
+  Enabled: false
+Metrics/MethodLength:
+  Enabled: false
+Metrics/LineLength:
+  Enabled: false
